--- a/profapp/templates/_ruslan/_index_layout.html
+++ b/profapp/templates/_ruslan/_index_layout.html
@@ -109,8 +109,10 @@
 
             var pr_chat_socket = io.connect('//socket.{{ MAIN_DOMAIN }}');
 
-            pr_chat_socket.on('set_unread_message_count', function (resp) {
-                angularControllerFunction('user_controller', 'set_unread_message_count')(resp['total']);
+            pr_chat_socket.on('message_notification', function (resp) {
+                if (resp['unread']) {
+                    angularControllerFunction('user_controller', 'set_unread_message_count')(resp['unread']['total']);
+                }
             });
 
             {% for message in get_flashed_messages() %}
