max messages count limitation

--- a/profapp/templates/messenger/messenger.html
+++ b/profapp/templates/messenger/messenger.html
@@ -119,56 +119,71 @@
             $scope.add_new_message = function (chat_room_id, message, index, is_new_session) {
 
                 var existing_messages = $scope.loaded_chats[chat_room_id]['messages'];
+                var max_messages = 200;
 
-                var is_first_message_in_session = function (ind) {
-                    return ind === 0 || existing_messages[ind]['timestamp'] - existing_messages[ind - 1]['timestamp'] > 3600;
-                };
+{#                var is_first_message_in_session = function (ind) {#}
+{#                    return ind === 0 || existing_messages[ind]['timestamp'] - existing_messages[ind - 1]['timestamp'] > 60;#}
+{#                };#}
 
                 message['cr_tm'] = $scope.moment(message['cr_tm']);
 
                 var len = existing_messages.length;
 
-                if (index >= len - 1) {
-                    existing_messages.push(message);
-                }
-                else if (index == 0) {
+
+                if (index == 0) {
                     existing_messages.unshift(message);
+                }
+                else if (index > len - 1) {
+                    existing_messages.push(message);
                 }
                 else {
                     existing_messages.splice(index, 0, message);
                 }
 
-                if (is_first_message_in_session(index)) {
-                    existing_messages[index]['session'] = true;
+{#                if (is_first_message_in_session(index)) {#}
+{#                    existing_messages[index]['session'] = true;#}
+{#                }#}
+{#                if (index > 0 && existing_messages[index - 1]['session'] && is_first_message_in_session(index)) {#}
+{#                    existing_messages[index - 1]['session'] = false;#}
+{#                }#}
+{#                if (index < len - 1 && existing_messages[index + 1]['session'] && is_first_message_in_session(index + 1)) {#}
+{#                    existing_messages[index + 1]['session'] = false;#}
+{#                }#}
+
+                if (len + 1 > max_messages) {
+                    if (index < len/2) {
+                        existing_messages.pop();
+                        $scope.loaded_chats[chat_room_id]['there_is_newer'] = true;
+                    }
+                    else {
+                        existing_messages.shift();
+                        $scope.loaded_chats[chat_room_id]['there_is_older'] = true;
+                    }
                 }
-                if (index > 0 && existing_messages[index - 1]['session'] && is_first_message_in_session(index)) {
-                    existing_messages[index - 1]['session'] = false;
-                }
-                if (index < len - 1 && existing_messages[index + 1]['session'] && is_first_message_in_session(index + 1)) {
-                    existing_messages[index + 1]['session'] = false;
-                }
+
 
             };
 
-            $scope.append_messages = function (chat_room_id, messages) {
-                console.log($scope.loaded_chats)
+            $scope.append_messages = function (chat_room_id, messages, older) {
                 var current_chat = $scope.loaded_chats[chat_room_id];
                 if (!current_chat) return;
 
                 var existing_messages = $scope.loaded_chats[chat_room_id]['messages'];
-                var max_messages = 6;
 
-                {#TODO: OZ by OZ: what to do if we have unloaded NEWER messages and new message come? in that case we will have gap in our messages and this gap will newer filled (until full refresh)#}
-                {#                if (existing_messages.length + messages.length > max_messages) {#}
-                {#                    if (older) {#}
-                {#                        existing_messages.splice(0, existing_messages.length - max_messages + messages.length);#}
-                {#                        current_chat['there_is_newer'] = true;#}
-                {#                    }#}
-                {#                    else {#}
-                {#                        existing_messages.splice(max_messages - 1 - messages.length, existing_messages.length - max_messages + messages.length);#}
-                {#                        current_chat['there_is_older'] = true;#}
-                {#                    }#}
-                {#                }#}
+
+{#                var to_remove = existing_messages.length + messages.length - max_messages;#}
+{#                if (to_remove>0) {#}
+{#                    if (older) {#}
+{#                        console.log('remove newer', existing_messages.length - to_remove, to_remove);#}
+{#                        existing_messages.splice(existing_messages.length - to_remove, to_remove);#}
+{#                        current_chat['there_is_newer'] = true;#}
+{#                    }#}
+{#                    else {#}
+{#                        console.log('remove older', 0, to_remove);#}
+{#                        existing_messages.splice(0, to_remove);#}
+{#                        current_chat['there_is_older'] = true;#}
+{#                    }#}
+{#                }#}
 
 
                 $.each(messages, function (message_index, message) {
@@ -192,15 +207,15 @@
             };
 
 
-            $scope.update_chat_room = function (chat_room_id, chat_room, force, stick_to_top, instant) {
-                console.log(chat_room_id, chat_room, force, stick_to_top, instant);
+            $scope.update_chat_room = function (chat_room_id, chat_room, force, older, instant) {
+{#                console.log(chat_room_id, chat_room, force, older, instant);#}
                 if ("there_is_older" in chat_room) $scope.loaded_chats[chat_room_id]['there_is_older'] = chat_room['there_is_older'];
                 if ("there_is_newer" in chat_room) $scope.loaded_chats[chat_room_id]['there_is_newer'] = chat_room['there_is_newer'];
 
                 if (chat_room['messages'] && chat_room['messages'].length) {
-                    $scope.append_messages(chat_room_id, chat_room['messages']);
+                    $scope.append_messages(chat_room_id, chat_room['messages'], older);
                     if ($scope.selected_chat_room['chat_room_id'] === chat_room_id) {
-                        $scope.stickToBottom(chat_room_id, chat_room, force, stick_to_top, instant);
+                        $scope.stickToBottom(chat_room_id, chat_room, force, older ? true : false, instant);
                     }
                 }
             };
@@ -223,11 +238,10 @@
 
 
                 pr_chat_socket.emit('load_messages', data, function (resp) {
-                    console.log('load_messages', resp);
                     if ($scope.loaded_chats[loaded_messages_chatr_room_id]) {
                         $scope.loaded_chats[loaded_messages_chatr_room_id][loadvar] = false;
                         $scope.update_chat_room(loaded_messages_chatr_room_id, resp, true,
-                                older ? true : false, instant);
+                                older, instant);
                         $scope.$digest();
                     }
                 });
@@ -259,7 +273,7 @@
                         $scope.restore_old_scroll_position();
                         $scope.load_messages(false, true);
                     }
-                    pr_chat_socket.emit('select_chat_room_id', chat_room ? chat_room['chat_room_id'] : null);
+{#                    pr_chat_socket.emit('select_chat_room_id', chat_room ? chat_room['chat_room_id'] : null);#}
                 }
             };
 
@@ -434,11 +448,10 @@
                 {#                });#}
 
                 pr_chat_socket.on('message_notification', function (resp) {
-                    console.log('message_notification', resp)
                     var new_message = resp['new_message'];
                     var unread = resp['unread'];
                     var message_unread = true;
-                    if (new_message && $scope.selected_chat_room && $scope.selected_chat_room['chat_room_id'] === new_message['chat_room_id']) {
+                    if (new_message && $scope.selected_chat_room && $scope.selected_chat_room['chat_room_id'] === new_message['chat_room_id'] && !$scope.selected_chat_room['there_is_newer']) {
                         $scope.append_messages(new_message['chat_room_id'], [new_message]);
                         $scope.stickToBottom(new_message['chat_room_id'], {'messages': [new_message]}, false, false, false);
                         if (new_message['from_user_id'] !== $scope.me_user['id']) {
@@ -633,13 +646,9 @@
                                         </li>
 
 
-                                        <li ng-repeat="message in selected_chat_room['messages'] track by $index"
+                                        <li ng-repeat="message in selected_chat_room['messages'] track by message.id"
                                             aang-class="{'right': message['from_user_id'] == me_user['id'], 'left': message['from_user_id'] != me_user['id']}"
                                             class="mar-btm">
-
-                                            <div ng-if="message.session" class="tac red">{{ ::_('chat session started
-                                                %(chat_session_start)s', {chat_session_start: message.cr_tm}) }}
-                                            </div>
 
                                             <div class="chat-img"
                                                  ng-class="{'media-right': message['from_user_id'] == me_user['id'], 'media-left': message['from_user_id'] != me_user['id']}">
