notifications, and utils=>tools renamed

--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -250,6 +250,25 @@ body {
   padding-right: 0px !IMPORTANT;
 }
 
+#messenger-controller {
+
+  .menu-company li a div {
+    position: relative;
+  }
+
+  .unread_messages_count {
+    font-size: 10px;
+    line-height: 100%;
+    text-align: center;
+    right: -10px;
+    bottom: -10px;
+    padding: 0.2em;
+    border-radius: 2px;
+    background-color: #500;
+    color: white;
+  }
+}
+
 .menu-site {
   span {
     display: none;
@@ -265,6 +284,7 @@ body {
     position: absolute;
     right: 0px;
   }
+
   div.unread_messages_count {
     font-size: 10px;
     line-height: 100%;
