--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -206,6 +206,20 @@ body {
 .info-padding {
   padding-right: 0px !IMPORTANT;
 }
+#messenger-controller .menu-company li a div {
+  position: relative;
+}
+#messenger-controller .unread_messages_count {
+  font-size: 10px;
+  line-height: 100%;
+  text-align: center;
+  right: -10px;
+  bottom: -10px;
+  padding: 0.2em;
+  border-radius: 2px;
+  background-color: #500;
+  color: white;
+}
 .menu-site span {
   display: none;
 }
